kubernetes/apps/jellyfin/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: jellyfin
  annotations:
    argocd.argoproj.io/sync-wave: "-1"
  labels:
    pod-security.kubernetes.io/enforce: privileged
